--- a/.github/workflows/be_ci.yml
+++ b/.github/workflows/be_ci.yml
@@ -1,10 +1,13 @@
-name: Set Mysql And CI
+name: CI on MySQL Container & CD with Gradle
 
 on:
   push:
-    branches: ["be-testCI"]
+    branches: [ "be-dev" ]
   workflow_dispatch:
 
+env:
+  RESOURCE_PATH: ./backend/src/main/resources/application.yaml
+  
 jobs:
   setup-mysql-and-test:
     runs-on: ubuntu-latest
@@ -40,10 +43,10 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: Set yml file for database connection
+      - name: Set yml file for test database connection
         uses: microsoft/variable-substitution@v1
         with:
-          files: "./backend/src/main/resources/application.yaml"
+          files: ${{ env.RESOURCE_PATH }} 
         env:
           spring.datasource.url: jdbc:mysql://localhost:3306/88heyTest
           spring.datasource.username: root
@@ -55,3 +58,57 @@ jobs:
       - name: Run tests with Gradle
         run: ./gradlew test
         working-directory: ./backend
+
+      - name: Set yml file for real server database connection
+        uses: microsoft/variable-substitution@v1
+        with:
+          files: ${{ env.RESOURCE_PATH }} 
+        env:
+          spring.datasource.url: ${{ secrets.DB_HOST }} 
+          spring.datasource.username: ${{ secrets.DB_USERNAME }} 
+          spring.datasource.password: ${{ secrets.DB_PASSWORD }} 
+
+      - name: Build with Gradle
+        run: ./gradlew bootJar
+
+      - name: Upload Build Jar
+        uses: actions/upload-artifact@v2
+        with:
+          name: gradleJar
+          path: backend/build/libs/*.jar
+
+  deploy:
+    needs: setup-mysql-and-test
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: gradleJar
+
+      - name: Copy files via SSH
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "*.jar"
+          target: "~"
+
+  SSH:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: ssh to ec2
+        uses: appleboy/ssh-action@master
+        with:
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SSH_USER }}
+          script: |
+            sudo fuser -k 8080/tcp
+            sudo nohup java -jar ~/*.jar > nohup.out 2> nohup.err < /dev/null &
+            exit
